--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <body>
     <div class="d-flex">
         <div class="container">
-            <img src="invitacion-amd-3.jpg" alt="">
-            <a href="https://hp.zoom.com/j/91552590304?pwd=RUhiNU9ONUk4STVYRDdvMGhvQS9sQT09" target="_blank"><img src="invitacion-adm-4.jpg" alt=""></a>
+            <img src="ms1.jpg" alt="">
+            <a href="https://hp.zoom.com/j/91552590304?pwd=RUhiNU9ONUk4STVYRDdvMGhvQS9sQT09" target="_blank"><img src="ms2.jpg" alt=""></a>
         </div>
     </div>
 </body>
